# CPP_TP3

./: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Helper.cpp  Helper.hpp  Signal.cpp  Signal.hpp  Sinus.cpp  Sinus.h  bruit.cpp  bruit.h  bruit.hpp  doctest.h  readme.md  signal_main_test.cpp  types.h
